Higher coordinate procrystals added

--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -9,7 +9,7 @@
 
 % Names
 \newcommand{\zach}{Zachariasen}
-\newcommand{\lm}{Lem\^aitre}
+\newcommand{\lm}{Lema\^itre}
 \newcommand{\aw}{Aboav\--Weaire}
 
 % Abbreviations
