--- a/thesis.tex
+++ b/thesis.tex
@@ -209,6 +209,7 @@
 \include{text/bilayers}
 \include{text/targeted_opt}
 \include{text/general_networks}
+\include{text/quasi2d}
 \include{text/procrystals}
 
 %% APPENDICES %% 
@@ -216,7 +217,7 @@
 %    page that just says "Appendices" to signal the end of your main text.
 \startappendices
 % Add or remove any appendices you'd like here:
-\include{appendices/forces}
+%\include{appendices/forces}
 
 
 %%%%% REFERENCES
